EDSC-1586-2: Card text overflow fix (#513)
* EDSC-1586: Updated text overflow on contact cards; adjusted DOI badge; Adjusted CWIC warning on granule page

* EDSC-1586: Test updates

* EDSC-1586: Updated email display

* EDSC-1586: Fixed test for email check

--- a/app/assets/stylesheets/modules/collection_details.css.scss
+++ b/app/assets/stylesheets/modules/collection_details.css.scss
@@ -263,7 +263,7 @@ a.endpoint-label {
   font-size: 0.8em;
   display: inline-block;
   border-radius: 4px;
-  padding: 0 0 0 0.6em;
+  padding: 0 0 0.1em 0.6em;
   padding-right: 0;
   background: #2980b9;
   color: #fff;
